--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
             </div>
         </div>
     </div>
+    <!-- *  =====================
+    newsletter html start Here
+    =====================
+*/ -->
+
+    <div class="newsletter-area">
+        <div class="container">
+            <div class="newsletter-wrapper">
+                <h2>Our Newsletter Section</h2>
+            </div>
+        </div>
+    </div>
 
     <!-- *  =====================
     services html start Here
@@ -163,6 +175,66 @@
             </div>
         </div>
     </div>
+      <!-- *  =====================
+    form html start Here
+    =====================
+*/ -->
+    <div class="form">
+        <div class="container">
+            <div class="form-wrapper">
+                <form action="">
+                    <h1>Contact Us</h1>
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                    <input type="text" placeholder="Nick Name">
+                    <input type="text" placeholder="User Name">
+                    <input type="email" placeholder="Your Email">
+                    <input type="password" placeholder="Your Password">
+                    <input type="password" placeholder="Confirm Password">
+                    <textarea name="" id="pop" cols="30" rows="5">type your text</textarea>
+                    <input class="hov" type="submit">
+                </form>
+            </div>
+        </div>
+    </div>
+<!-- /*  =====================
+    footer service CSS start Here
+    =====================
+*/ -->
+   <div class="footer-services">
+    <div class="container">
+        <div class="our-services">
+            <div class="single-footer-top">
+                <h2>Our Services</h2>
+                <ul>
+                        <li>Web design</li>
+                        <li>Web Development</li>
+                        <li>WP Theme</li>
+                        <li>WP Plugin</li>
+                        <li>WP Plugin</li>
+                </ul>
+            </div>
+            <div class="single-footer-top">
+                <h2>Pages</h2>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="single-footer-top">
+                <h2>Importance Links</h2>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                    <li><a href="#">Customer support</a></li>
+                    <li><a href="#">Terms & Condition</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+   </div>
     <!-- *  =====================
     footer html start Here
     =====================
